--- a/sections/overseer.jade
+++ b/sections/overseer.jade
@@ -3,15 +3,22 @@ html
   head
     link(rel='stylesheet', href='/css/index.css')
     link(rel='stylesheet', href='/css/bootstrap.css')
+    script(type='text/javascript', src='/js/d3.min.js')
+    script(type='text/javascript', src='/js/filterbubblesimple.js')
     title ઉ data Overseer
 
-  body
+  body(onload="displayOverseer('#overseer');")
   
   .container-fluid
-    .jumbotron Overseer
+    .jumbotron
+      h1 ઉ node Overseer
+      h3 The meta-data owned by this node, are public and part of the process
 
   .container-fluid
     .propaganda
-      p This page is intended to tell publicly open data about the meta data owner by this node. To ensure cooperation and data sharing, who runs the service receive the user timeline, and through API other researcher can access over it.
+      p To ensure cooperation and data sharing among researchers, who runs the service receive the user timeline, and through API other researcher can access over it. This interface show some meta-data on the data owned.
+
       p A privacy risk assessment has still to be done. The information returned has to be pseudo-anonymized hashing the usedId of the contributor; This is not yet done.
 
+  .container-fluid
+    div(id="overseer")
