--- a/styles/index.styl
+++ b/styles/index.styl
@@ -10,13 +10,27 @@ body
 p
   font-size 1.3em
 
-
 .center
   text-align center
 
-.tif
-  width 80%
-  font-size: 1.4em
+.theinputfield
+  width 70%
+  font-size 1.4em
+
+.buttonfield
+  width 10%
+
+.monospace
+  font-family 'Source Code Pro', monospace
+  margin 0
+
+.postidinfo
+  margin 0
+  padding-left 20%
+  width 60%
+  background paleyellow
+  font-size 0.7em
+
 
 .head-text
   text-transform uppercase
