small clarification on the status

--- a/sections/personal.jade
+++ b/sections/personal.jade
@@ -37,7 +37,9 @@ html
           li
             a(href='/slides-long') Slides
 
-  .center.smaller as you are guessing, this visualisation is still a work in progres...
+  .center.smaller Visualisation not yet implemented
+  .center.smaller Visualisation not yet implemented
+  .center.smaller Visualisation not yet implemented
 
   .container-fluid
     h3 ઉ Statistics, based on information you send 
