--- a/sections/realitymeter.jade
+++ b/sections/realitymeter.jade
@@ -14,6 +14,11 @@ html
         h1 RealityMeter
         h3 every Social Media Manager want a bite of reality!
 
+    .center.smaller Visualisation not yet implemented
+    .center.smaller Visualisation not yet implemented
+    .center.smaller Visualisation not yet implemented
+    .center.smaller Visualisation not yet implemented
+
     .container-fluid
       div(id="realitygraph")
 
