added background thoughts, fixed a couple of bugs

--- a/sections/generic.jade
+++ b/sections/generic.jade
@@ -21,7 +21,8 @@ block background
 
   p Reflecting on how the internet has been revolutionary to driving news, mobilizing people, and stimulating new thoughts, it naturally follows that our right to information has to be updated for this new era. This is about our fundamental rights as an active and informed citizenry. The Terms of Service of Facebook may forbid me to crack open the algorithmic Pandora’s box, but it doesn’t matter; this right exists on a higher level, and if I have to exert civil disobedience toward a private entity, so be it.
 
-  small(ahref id="/background") see more
+  small
+    a(href="/page-background-thoughts" target="_blank") Some background thoughts
 
 block useit
 
@@ -72,7 +73,7 @@ block getinvolved
     |, or to understand the plan, at the 
     a(href="https://github.com/vecna/ESCVI/issues") open tickets
     |.
-  p I'm looking for a data-visualisation expert or designer who is able to show how an algorithm works through visualisation. If you're interested, please contact me at \\
+  p I'm looking for a data-visualisation expert or designer who is able to show how an algorithm works through visualisation. If you're interested, please contact me at claudio at tracking dot exposed.
   p Are you a researcher? Get in touch if you want to have a custom version of the script or the development of a specific API to support your research. 
       a.sug(href="#" id="groups" onclick="suggestion('groups');return false;") [Share your suggestions, ideas, or projects]
 
