--- a/sections/skeleton.jade
+++ b/sections/skeleton.jade
@@ -28,7 +28,8 @@ html
           | ⌁ stability 
           span.red LOW
           | ⌁ funding 
-          span.red broke
+          span.red 
+            a(href="https://paypal.me/claudioGifts", target="_blank") broke
 
     nav.navbar.navbar-default
       div.container
@@ -56,7 +57,7 @@ html
             li
               a(href='#links') Links 
             li
-              a(href='/slides-long') Slides
+              a(href='/page-long-presentation') Slides
 
     div#what
       div.propaganda
