approached issue #3, new debug api to report parsing error

--- a/sections/generic.jade
+++ b/sections/generic.jade
@@ -95,7 +95,7 @@ block about
 
 block thanks
 
-  p Thank you to Barbara Anderlich, Philip Di Salvo, Alberto Granzotto, Brennan Novak, Andrea Ramondi, and Jillian York for their help with various aspects of the project.
+  p Thank you to Barbara Anderlič, Philip Di Salvo, Alberto Granzotto, Brennan Novak, Andrea Ramondi, and Jillian York for their help with various aspects of the project.
 
   p This project would be impossible without the help of the network. I encourage you to get in touch, and 
     a(href="#getinvolved") get involved
