new /impact page skeleton

--- a/sections/skeleton.jade
+++ b/sections/skeleton.jade
@@ -5,10 +5,12 @@ html
     link(rel='stylesheet', href='/css/bootstrap.css')
     script(type='text/javascript', src='/js/suggest.js')
     script(type='text/javascript', src='/js/lodash.min.js')
+    script(type='text/javascript', src='/js/bootstrap.min.js')
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
-    title facebook.tracking.exposed
+    meta(name="keywords" content="facebook tracking exposed")
+    title facebook tracking exposed
 
   body
  
