--- a/sections/skeleton.jade
+++ b/sections/skeleton.jade
@@ -22,13 +22,13 @@ html
         p.smile.center description 
           span.green 95% 
           | ⌁ infrastructure 
-          span.red 15% 
+          span.red 20% 
           | ⌁ α-roadmap 
-          span.orange 2/4
+          span.orange 3/4
           | ⌁ morale 
           span.green 100% 
           | ⌁ stability 
-          span.red LOW
+          span.red MEDIUM
           | ⌁ funding 
           span.red 
             a(href="https://paypal.me/claudioGifts", target="_blank") broke
