a working mockup of 'impact' with c3

--- a/sections/impact.jade
+++ b/sections/impact.jade
@@ -3,7 +3,9 @@ html
   head
     link(rel='stylesheet', href='/css/index.css')
     link(rel='stylesheet', href='/css/bootstrap.css')
+    link(rel='stylesheet', href='/css/c3.css')
     script(type='text/javascript', src='/js/d3.min.js')
+    script(type='text/javascript', src='/js/c3.min.js')
     script(type='text/javascript', src='/js/impact.js')
     title ઉ Impact
 
@@ -16,7 +18,10 @@ html
 
   .container-fluid
     .propaganda
-      p Since the Summer 2016 facebook.tracking.exposed is in Alpha release, below the graph of the collected data
+      p Since the Summer 2016 facebook.tracking.exposed is in α release, below the graph of the collected data.
+      p Open Source has been an innovation in the early '90, now Open Data would make clear that our business is not in be owner of your details.
 
   .container-fluid
     div(id="timeAdoption")
+
+  div.footer
