--- a/sections/skeleton.jade
+++ b/sections/skeleton.jade
@@ -36,13 +36,13 @@ html
     nav.navbar.navbar-default
       div.container
         div.navbar-header
-          button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#claudiosnavbar" aria-expanded="false")
+          button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#thenavbar" aria-expanded="false")
             span(id="sr-only") Toggle navigation
             span.icon-bar
             span.icon-bar
             span.icon-bar
 
-        div.collapse.navbar-collapse(id="claudiosnavbar")
+        div.collapse.navbar-collapse(id="thenavbar")
           ul.nav.navbar-nav
             li
               a(href='#what') What
