cleaned impact text

--- a/sections/impact.jade
+++ b/sections/impact.jade
@@ -18,8 +18,7 @@ html
 
   .container-fluid
     .propaganda
-      p Since the Summer 2016 facebook.tracking.exposed is in α release, below the graph of the collected data.
-      p Open Source has been an innovation in the early '90, now Open Data would make clear that our business is not in be owner of your details.
+      p Since the end of Summer 2016 facebook.tracking.exposed is in α release, below the graph of the collected data.
 
   .container-fluid
     div(id="timeAdoption")
