--- a/styles/index.styl
+++ b/styles/index.styl
@@ -111,6 +111,12 @@ p
 .fb-color
   background-color #3b5999
 
+.blue-fb
+  color #3b5999
+
+.lightblue-fb
+  color #8b9dc3
+
 .white
   color white
 
