fixed a warning and a couple of viz details

--- a/sections/impact.jade
+++ b/sections/impact.jade
@@ -16,6 +16,26 @@ html
       h1 ઉ Impact
       h3 The meta-data owned by this node, are public and part of the process
 
+  nav.navbar.navbar-default
+    div.container
+      div.navbar-header
+        button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#thenavbar" aria-expanded="false")
+          span(id="sr-only") Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+
+      div.collapse.navbar-collapse(id="thenavbar")
+        ul.nav.navbar-nav
+          li
+            a(href='/') Home
+          li
+            a(href='/realitymeter') RealityMeter
+          li
+            a(href='/overseer') Overseer
+          li
+            a(href='/slides-long') Slides
+
   .container-fluid
     .propaganda
       p Since the end of Summer 2016 facebook.tracking.exposed is in α release, below the graph of the collected data.
