--- a/userscript/styles/app.scss
+++ b/userscript/styles/app.scss
@@ -1,3 +1,14 @@
-div {
-    border-bottom: 1px solid red;
+@import 'buttons';
+
+div[role="banner"] {
+    background-color: tomato !important;
+}
+
+#escvi--root {
+    position: fixed;
+    bottom: -1px;
+    left: 25px;
+    display: block;
+    width: 50px;
+    height: 50px;
 }
