--- a/styles/index.styl
+++ b/styles/index.styl
@@ -46,6 +46,11 @@ p
     border-left: #3b5999 0.01em solid
     padding-left: 0.1em
 
+.simpletext
+  padding-right 10% 
+  padding-left 10%
+  padding-bottom 1%
+
 .smaller
   font-weight bold
   font-size 0.75em
