--- a/sections/impact.jade
+++ b/sections/impact.jade
@@ -4,9 +4,9 @@ html
     link(rel='stylesheet', href='/css/index.css')
     link(rel='stylesheet', href='/css/bootstrap.css')
     link(rel='stylesheet', href='/css/c3.css')
-    script(type='text/javascript', src='/js/d3.min.js')
-    script(type='text/javascript', src='/js/c3.min.js')
-    script(type='text/javascript', src='/js/impact.js')
+    script(type='text/javascript', src='/js/vendor/d3.min.js')
+    script(type='text/javascript', src='/js/vendor/c3.min.js')
+    script(type='text/javascript', src='/js/local/impact.js')
     title ઉ Impact
 
   body(onload="displayTimeAdoption('#timeAdoption'); displayCountryPie('#countrypie');")
