--- a/sections/realitymeter.jade
+++ b/sections/realitymeter.jade
@@ -3,8 +3,8 @@ html
   head
     link(rel='stylesheet', href='/css/index.css')
     link(rel='stylesheet', href='/css/bootstrap.css')
-    script(type='text/javascript', src='/js/d3.min.js')
-    script(type='text/javascript', src='/js/filterbubblesimple.js')
+    script(type='text/javascript', src='/js/vendor/d3.min.js')
+    script(type='text/javascript', src='/js/local/filterbubblesimple.js')
     title ઉ RealityMeter
 
     body(onload="displayRealityExamples('#listofexamplepost'); displayRealityGraph(getPostId(null), '#realitygraph');")
