--- a/sections/skeleton.jade
+++ b/sections/skeleton.jade
@@ -3,9 +3,9 @@ html
   head
     link(rel='stylesheet', href='/css/index.css')
     link(rel='stylesheet', href='/css/bootstrap.css')
-    script(type='text/javascript', src='/js/suggest.js')
-    script(type='text/javascript', src='/js/lodash.min.js')
-    script(type='text/javascript', src='/js/bootstrap.min.js')
+    script(type='text/javascript', src='/js/vendor/lodash.min.js')
+    script(type='text/javascript', src='/js/vendor/bootstrap.min.js')
+    script(type='text/javascript', src='/js/local/suggest.js')
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
