rename escvi → fbtrex

--- a/userscript/styles/app.scss
+++ b/userscript/styles/app.scss
@@ -4,7 +4,7 @@ div[role="banner"] {
     background-color: tomato !important;
 }
 
-#escvi--root {
+#fbtrex--root {
     position: fixed;
     bottom: -1px;
     left: 25px;
