--- a/userscript/styles/buttons.scss
+++ b/userscript/styles/buttons.scss
@@ -1,4 +1,4 @@
-.escvi--main-button {
+.fbtrex--main-button {
     display: block;
     top: 0;
     bottom: 0;
@@ -17,7 +17,7 @@
     transition: opacity 0.3s ease-in-out;
 }
 
-.escvi--main-button:hover {
+.fbtrex--main-button:hover {
     text-decoration: none;
     opacity: 1;
 }
