--- a/sections/personal.jade
+++ b/sections/personal.jade
@@ -47,7 +47,7 @@ html
           li
             a(href='/impact') Impact
           li
-            a(href='/slides-long') Slides
+            a(href='/realitycheck/random') Random User
 
   if userId !== 0
 
