removed overseer page and refrence: is in ffact replaced by /impact

--- a/sections/impact.jade
+++ b/sections/impact.jade
@@ -34,7 +34,7 @@ html
           li
             a(href='/realitymeter') RealityMeter
           li
-            a(href='/overseer') Overseer
+            a(href='/realitycheck/random') Random User
           li
             a(href='/slides-long') Slides
 
