--- a/sections/personal.jade
+++ b/sections/personal.jade
@@ -43,8 +43,6 @@ html
           li
             a(href='/realitymeter') RealityMeter
           li
-            a(href='/overseer') Overseer
-          li
             a(href='/impact') Impact
           li
             a(href='/realitycheck/random') Random User
@@ -60,7 +58,7 @@ html
         b censorship
         |.
       p Because like an gatekeeper deciding who enter and who don't, Facebook's algorithm decide what you are going to see (promoted in the top of your feed) and what you would not see. Or you just see once, and never more, so you can't even claim censorship, and they can call "optimisation of your experience". 
-      p With the following small visualisation, you'll see how much things get distorted by the algorithm.
+      p With the following visualisation are just work in progress to display, interactively, how the algorithm dirtor the reality.
 
     div.main-content
        
@@ -71,10 +69,5 @@ html
     div.main-content
       h4 When have been posted the posts ઉ#{userId} saw?
     div(id="absolute")
-
-    div.main-content
-      h4 Reality distortion
-
-      b This visualisation is a work in progress, not available now
 
     .footer
