[wip] improve scraping

--- a/userscript/styles/visualDebug.scss
+++ b/userscript/styles/visualDebug.scss
@@ -1,3 +1,16 @@
-.fbtrex--post-processed {
-    border: 1px solid green !important;
+.fbtrex--visual-debug {
+    padding: 10px;
+
+    dl {
+        dt, dd {
+        }
+        dd {
+            margin-left: 0;
+            margin-bottom: 10px;
+            &:empty:before {
+                content: 'missing';
+                color: red;
+            }
+        }
+    }
 }
