--- a/sections/skeleton.jade
+++ b/sections/skeleton.jade
@@ -22,15 +22,15 @@ html
           h1 facebook.tracking.exposed
       div.container-fluid
         p.smile.center description 
-          span.green 95% 
+          span.green 90% 
           | ⌁ infrastructure 
           span.red 20% 
-          | ⌁ α-roadmap 
-          span.orange 3/4
+          | ⌁ ß-release 
+          span.green -11 days 
           | ⌁ morale 
-          span.green 100% 
+          span.green 101% 
           | ⌁ stability 
-          span.red MEDIUM
+          span.red BAH! 
           | ⌁ funding 
           span.red 
             a(href="https://paypal.me/claudioGifts", target="_blank") broke
