--- a/styles/index.styl
+++ b/styles/index.styl
@@ -31,7 +31,6 @@ p
   background paleyellow
   font-size 0.7em
 
-
 .head-text
   text-transform uppercase
   color #fff
@@ -89,13 +88,15 @@ p
 .facebook
   background #3b5999
 
+.larger-content
+  margin 30px auto
+
 .main-content
   margin 50px auto
   max-width 600px
 
   p
     line-height 1.6
-    margin-bottom 1.7em
 
 .footer
   margin 50px auto
